--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "^2.2.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.9.0",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.2.0",
+    "framer-motion": "^11.11.0",
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
     "react": "^18",
+    "react-calendar": "^5.0.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
