--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^11.11.0",
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
+    "next-auth": "^4.24.8",
     "react": "^18",
     "react-calendar": "^5.0.0",
     "react-day-picker": "^8.10.1",
