--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.11.0",
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
     "next-auth": "^4.24.8",
+    "pg": "^8.13.0",
     "react": "^18",
     "react-calendar": "^5.0.0",
     "react-day-picker": "^8.10.1",
